--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -20,7 +20,7 @@
                     <a href="http://localhost:8080/contact_us" th:text="#{footer.contact_us}"></a>
                 </div>
                 <div class="col-md-4" id="footer_content_legal" style="padding-top: 0.5em">
-                    <a href="http://localhost:8080" th:text="#{footer.legal}"></a>
+                    <a href="http://localhost:8080/contact_us" th:text="#{footer.legal}"></a>
                 </div>
             </div>
         </div>
