--- a/src/main/resources/static/css/mainpage.css
+++ b/src/main/resources/static/css/mainpage.css
@@ -6,6 +6,11 @@ a:hover{
     color: #DB3C3C;
 }
 
+#aboutuspic{
+    max-width:100%;
+    max-height:100%;
+}
+
 .social-part .fa{
     padding-right:20px;
 }
