--- a/src/main/resources/templates/artist/myArtworks.html
+++ b/src/main/resources/templates/artist/myArtworks.html
@@ -47,27 +47,35 @@
                     <input type="file" id="firstImageInput" th:field="*{images[0].multipartFile}"
                            onchange="reload_image('firstImage', this)" class="fadeIn second"
                            enctype="multipart/form-data" accept=".jpg, .png, .jpeg">
-                    <img th:src="@{/images/upload_image.jpg}" id="firstImage"
+                    <div style="width: max-content">
+                    <img th:src="@{/images/upload_image.jpg}" id="firstImage" class="prev_upload"
                          th:height="${@environment.getProperty('image.medium.height')}"
-                         th:width="${@environment.getProperty('image.medium.width')}">
+                         th:width="${@environment.getProperty('image.medium.width')}" th:href="">
+                        </div>
                     <input type="file" id="secondImageInput" th:field="*{images[1].multipartFile}"
                            onchange="reload_image('secondImage', this)" class="fadeIn second"
                            enctype="multipart/form-data" accept=".jpg, .png, .jpeg">
-                    <img th:src="@{/images/upload_image.jpg}" id="secondImage"
+                    <div style="width: max-content">
+                    <img th:src="@{/images/upload_image.jpg}" id="secondImage" class="prev_upload"
                          th:height="${@environment.getProperty('image.medium.height')}"
                          th:width="${@environment.getProperty('image.medium.width')}">
+                    </div>
                     <input type="file" id="thirdImageInput" th:field="*{images[2].multipartFile}"
                            onchange="reload_image('thirdImage', this)" class="fadeIn second"
                            enctype="multipart/form-data" accept=".jpg, .png, .jpeg">
-                    <img th:src="@{/images/upload_image.jpg}" id="thirdImage"
+                        <div style="width: max-content">
+                    <img th:src="@{/images/upload_image.jpg}" id="thirdImage" class="prev_upload"
                          th:height="${@environment.getProperty('image.medium.height')}"
                          th:width="${@environment.getProperty('image.medium.width')}">
+                        </div>
                     <input type="file" id="forthImageInput" th:field="*{images[3].multipartFile}"
                            onchange="reload_image('forthImage', this)"
                            class="fadeIn second" enctype="multipart/form-data" accept=".jpg, .png, .jpeg">
-                    <img th:src="@{/images/upload_image.jpg}" id="forthImage"
+                            <div style="width: max-content">
+                    <img th:src="@{/images/upload_image.jpg}" id="forthImage" class="prev_upload"
                          th:height="${@environment.getProperty('image.medium.height')}"
                          th:width="${@environment.getProperty('image.medium.width')}">
+                            </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" th:text="#{modal.close}"></button>
